force-app/main/default/objects/Appel__c/Appel__c.object-meta.xml
<CustomObject>
    <description>Objet pour lancer les appels webservice avaya (preparelistOfCalls)</description>
    <label>Appel</label>
    <nameField>
        <displayFormat>Appel-{0000}</displayFormat>
        <label>Appel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>