force-app/main/default/objects/Appel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appels</relationshipLabel>
    <relationshipName>Appels</relationshipName>
    <type>Lookup</type>
</CustomField>