force-app/main/default/objects/Appel__c/fields/Campagne_Id_Avaya__c.field-meta.xml
<CustomField>
    <fullName>Campagne_Id_Avaya__c</fullName>
    <formula>Campaign__r.CampagneID_Avaya__c</formula>
    <label>Campagne Id Avaya</label>
    <type>Text</type>
</CustomField>