force-app/main/default/objects/Appel__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>