force-app/main/default/objects/Appel__c/fields/Telephone1__c.field-meta.xml
<CustomField>
    <fullName>Telephone1__c</fullName>
    <formula>IF(Account__r.Contact_principal__r.MobilePhone !=null,&apos;+33&apos;+TRIM(right(Account__r.Contact_principal__r.MobilePhone , (LEN( Account__r.Contact_principal__r.MobilePhone) - 1))),null)</formula>
    <inlineHelpText>Numéro du contact principal du foyer</inlineHelpText>
    <label>Téléphone1</label>
    <type>Text</type>
</CustomField>