force-app/main/default/objects/Appel__c/fields/Telephone2__c.field-meta.xml
<CustomField>
    <fullName>Telephone2__c</fullName>
    <formula>IF(Account__r.Numero_de_telephone_fixe__c !=null,&apos;+33&apos;+TRIM(right(Account__r.Numero_de_telephone_fixe__c , (LEN( Account__r.Numero_de_telephone_fixe__c) - 1))),null)</formula>
    <inlineHelpText>Numéro de fix du foyer</inlineHelpText>
    <label>Téléphone2</label>
    <type>Text</type>
</CustomField>